<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.telematics.denunciaciudadana.Complaint">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complaint_load"
        android:id="@+id/button6"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:text="@string/complaint_address"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lastname"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/firstname"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText6"
        android:text="@string/phone"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText7"
        android:text="@string/state"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText8"
        android:text="@string/city"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/complaint_org"
        android:ems="10"
        android:id="@+id/editText9"
        android:layout_below="@+id/editText8"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText10"
        android:text="@string/complaint_secondaddress"
        android:layout_below="@+id/editText9"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText11"
        android:layout_below="@+id/editText10"
        android:layout_alignRight="@+id/editText10"
        android:layout_alignEnd="@+id/editText10"
        android:text="@string/obligatory" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/button7"
        android:layout_below="@+id/editText11"
        android:layout_toLeftOf="@+id/editText11"
        android:layout_toStartOf="@+id/editText11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_alignRight="@+id/editText11"
        android:layout_alignEnd="@+id/editText11"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tomar Foto"
        android:id="@+id/button18"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />
</RelativeLayout>
