<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.telematics.denunciaciudadana.SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_sign_up"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText21"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="*Correo Electrónico" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="*Contraseña"
        android:ems="10"
        android:id="@+id/editText22"
        android:layout_below="@+id/editText21"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="*Repetir Contraseña"
        android:ems="10"
        android:id="@+id/editText23"
        android:layout_below="@+id/editText22"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/lastname"
        android:ems="10"
        android:id="@+id/editText24"
        android:layout_below="@+id/editText23"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/firstname"
        android:ems="10"
        android:id="@+id/editText25"
        android:layout_below="@+id/editText24"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText26"
        android:layout_below="@+id/editText25"
        android:layout_centerHorizontal="true"
        android:text="@string/phone" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText27"
        android:layout_below="@+id/editText26"
        android:layout_centerHorizontal="true"
        android:text="@string/state" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText28"
        android:layout_below="@+id/editText27"
        android:layout_centerHorizontal="true"
        android:text="@string/city" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/obligatory"
        android:id="@+id/textView10"
        android:layout_below="@+id/editText28"
        android:layout_alignRight="@+id/editText28"
        android:layout_alignEnd="@+id/editText28" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/button15"
        android:layout_below="@+id/textView10"
        android:layout_toLeftOf="@+id/textView10"
        android:layout_toStartOf="@+id/textView10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button16"
        android:layout_below="@+id/textView10"
        android:layout_toRightOf="@+id/button15"
        android:layout_toEndOf="@+id/button15" />
</RelativeLayout>
