<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.telematics.denunciaciudadana.ChangePassword2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_change_password1"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/change_pass2"
        android:ems="10"
        android:id="@+id/editText19"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/change_repeat"
        android:ems="10"
        android:id="@+id/editText20"
        android:layout_below="@+id/editText19"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:id="@+id/button13"
        android:layout_below="@+id/editText20"
        android:layout_alignLeft="@+id/editText20"
        android:layout_alignStart="@+id/editText20"
        android:layout_marginTop="36dp"
        android:onClick="aceptarC2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button14"
        android:layout_alignTop="@+id/button13"
        android:layout_alignRight="@+id/editText20"
        android:layout_alignEnd="@+id/editText20"
        android:onClick="cancelarC2" />
</RelativeLayout>
